2002-03-08  Morten Welinder  <terra@diku.dk>

	* analysis-tools.c (fourier_fft_inv): Eliminate.
	(fourier_fft): Handle inverse case also.  Make n and skip
	parameters.  Eliminate fourier_t.  Constify.

2002-03-07  Morten Welinder  <terra@diku.dk>

	* analysis-tools.c (set_cell_value): Safety checks.

2002-03-07  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* goal-seek, Makefile.am: Moved goal seek into this directory.

	* stat-analysis, Makefile.am: Moved analysis tools into this
	directory.

2002-03-06  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver: Moved Solver into this directory.

	* Makefile.am: Created.